Setting up a config.py and setting up a simple connection to the telegram API

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Project specific
+pres-speech/
+marcoPoloBot/
+clinton-trump-corpus/
+Chatbot instructions.pdf
+
+# configuration
+config.py
+__pycache__/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
